mywork/force-app/main/default/objects/Scratch_Org_Event__e/Scratch_Org_Event__e.object-meta.xml
<CustomObject>
    <label>Scratch Org Event</label>
    <pluralLabel>Scratch Org Events</pluralLabel>
</CustomObject>