mywork/force-app/main/default/objects/Scratch_Org_Event__e/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details of the event</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>