mywork/force-app/main/default/objects/Scratch_Org_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of event that occurred for a Scratch Org (e.g. "created", "push in progress", etc.)</description>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>